--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <body>
   <div class="container">
     <div class="sidebar">
-      <img src="https://i.imgur.com/nG3qOQw.png" alt="profile photo">
+      <img src="/profile.jpg" alt="profile photo">
       <h1>殷芳薇</h1>
       <div class="info">
         <p>學號：113011143</p>
